--- a/Cherniss_Gallagher_HW5.qmd
+++ b/Cherniss_Gallagher_HW5.qmd
@@ -27,14 +27,14 @@ flights1[carrier == "DL" & origin == "JFK" & dest == "SEA", c("carrier","origin"
 
 ## 3: Use and show data.table code to produce a table that shows a carrier of UA, a month of March, and an airtime that is below 330.
 ```{r question 3}
-# R code  here
-
+flights1[carrier == "UA" & month == 3 & air_time < 330, c("carrier", "month", "air_time")]
 ```
 
 ## 4: Use and show tidyverse code to produce a table that shows a carrier of UA, a month of March, and an airtime that is below 330.
 ```{r question 4}
-# R code  here
-
+flights2 |>  
+  select(carrier, month, air_time) |> 
+  filter(carrier == "UA", month == 3, air_time < 330) 
 ```
 
 ## 5: Use the data.table method to add a variable called speed that is the average air speed of the plane in miles per hour.
