--- a/Cherniss_Gallagher_HW5.qmd
+++ b/Cherniss_Gallagher_HW5.qmd
@@ -39,25 +39,25 @@ flights2 |>
 
 ## 5: Use the data.table method to add a variable called speed that is the average air speed of the plane in miles per hour.
 ```{r question 5}
-# R code  here
-
+flights1[, speed := (distance / air_time) * 60]
+flights1[, c("distance", "air_time", "speed")]
 ```
 
 ## 6: Use the tidyverse method to add a variable called speed that is the average air speed of the plane in miles per hour.
 ```{r question 6}
-# R code  here
-
+flights2 |>
+  mutate(speed = (distance / air_time) * 60) |> 
+  select(distance, air_time, speed)
 ```
 
 ## 7: Show and use coding to change the carrier abbreviation of UA to UniitedAir,
 ### 7a: data.table method
 ```{r question 7a}
-# R code  here
+# R code here
 
 ```
 
 ### 7b: tidyverse method (Use a sequence of dplyr commands so that you can see the change in your table)
 ```{r question 7b}
-# R code  here
-
+# R code here
 ```
