--- a/Cherniss_Gallagher_HW5.qmd
+++ b/Cherniss_Gallagher_HW5.qmd
@@ -53,11 +53,18 @@ flights2 |>
 ## 7: Show and use coding to change the carrier abbreviation of UA to UniitedAir,
 ### 7a: data.table method
 ```{r question 7a}
-# R code here
+flights1[carrier == "UA", carrier := "UnitedAir"]
 
+flights1[carrier == "UnitedAir", .(carrier, origin, dest)]
 ```
 
 ### 7b: tidyverse method (Use a sequence of dplyr commands so that you can see the change in your table)
 ```{r question 7b}
-# R code here
+flights2 <- flights2 |> 
+  mutate(carrier = ifelse(carrier == "UA", "UnitedAir", carrier))
+
+flights2 |> 
+  filter(carrier == "UnitedAir") |> 
+  select(carrier, origin, dest) |> 
+  head()
 ```
